--- a/index.html
+++ b/index.html
@@ -5,30 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Use</title>
     <style>
+        /* Global styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
-            line-height: 1.6;
+            padding: 0;
+            background-color: #ECEBE4; /* Sand white background */
             color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
+
         header {
-            background-color: #2c3e50;
+            background-color: #D56062; /* Rust red for header */
             color: white;
-            padding: 10px 20px;
             text-align: center;
+            padding: 20px 10px;
+            position: sticky;
+            top: 0; /* Stick the header to the top of the viewport */
+            z-index: 1000; /* Ensure it stays above other content */
         }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        main {
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+            flex: 1; /* Makes main content expand to fill available space */
+        }
+
         section {
             margin-bottom: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 15px;
         }
-        h1, h2 {
-            color: #2980b9;
+
+        h2 {
+            color: #D56062; /* Rust red for headings */
         }
+
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #f1f1f1;
-            margin-top: 20px;
+            background-color: #D56062; /* Rust red for footer */
+            color: white;
         }
     </style>
 </head>
@@ -37,6 +64,7 @@
         <h1>Terms of Use</h1>
     </header>
 
+<main>
     <section>
         <h2>Acceptance of Terms</h2>
         <p>By accessing and using this application, you agree to comply with and be bound by the following terms and conditions. If you do not agree to these terms, you must not use this application.</p>
@@ -60,6 +88,7 @@
         <h2>Contact Information</h2>
         <p>If you have any questions or concerns about these terms, please contact us at <a href="mailto:mulyanimu@gmail.com">mulyanimu@gmail.com</a>.</p>
     </section>
+</main>
 
     <footer>
         <p>&copy; 2024 Mououoo. All Rights Reserved.</p>
